--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,4 +3,12 @@
 
   <style name="Bundel.Theme" parent="Theme.AppCompat.DayNight.NoActionBar" />
 
+  <style name="Bundel.Theme.Starting" parent="Theme.SplashScreen">
+    <item name="windowSplashScreenAnimatedIcon">@drawable/ic_bundel_launcher_foreground</item>
+    <item name="windowSplashScreenBackground">@color/primary</item>
+    <item name="postSplashScreenTheme">@style/Bundel.Theme</item>
+  </style>
+
+  <color name="primary">#FF006e1e</color>
+
 </resources>
