--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <style name="Bundel.Theme" parent="Theme.AppCompat.DayNight.NoActionBar" />
+  <style name="Bundel.Theme" parent="Theme.AppCompat.DayNight.NoActionBar">
+<!--    <item name="android:windowTranslucentStatus">true</item>-->
+<!--    <item name="android:windowTranslucentNavigation">true</item>-->
+    <item name="android:statusBarColor">@android:color/transparent</item>
+    <item name="android:navigationBarColor">@android:color/transparent</item>
+  </style>
 
   <style name="Bundel.Captain.Vadim" parent="Theme.SplashScreen">
     <item name="windowSplashScreenAnimatedIcon">@drawable/ic_bundel_launcher_foreground</item>
